[tool.poetry]
name = "robustpython"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.0.261"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
select = ["ALL", "D203", "D213"] # I:isort, N:pep8-naming
line-length = 120
ignore = ["D103", "D100", "T201", "D203", "D212", "D211"]